# hotta-data-builder

./: .env  README.md  config.json  pyproject.toml  utils.py
config/: database_config.py  minio_config.py
models/: __init__.py  artifact_data.py  cook_recipes_data_table.py  fashion_data.py  food_data_table.py  ingredient_data_table.py  matrix.py  recipes_food.py  recipes_ingredients.py  suit_unactivate_detail.py  weapon_sensuality_level_data.py  weapon_skill.py  weapon_upgrade_star_pack.py  weapons.py
scripts/: artifact_info_to_database.py  fashion_info_to_database.py  food_info_to_database.py  info_to_database.py  ingredient_info_to_database.py  main.py  make_artifact_data.py  make_artifact_screenshots.py  make_cook_recipes.py  make_fashion_data.py  make_fashion_screenshots.py  make_food_screenshots.py  make_game_json.py  make_ingredient_screenshots.py  make_matrix.py  make_matrix_screenshots.py  make_mongo.py  make_recipes_screenshots.py  make_weapons.py  make_weapons_screenshots.py  make_weapons_skill_screenshots.py  matrix_info_to_database.py  recipes_info_to_database.py  upload_minio.py  weapons_info_to_database.py
scripts/data/: make_artifact_data.py  (+5 more)
templates/: template-arms.html  template-artifact.html  template-fashion.html  template-food.html  template-ingredient.html  template-matrix.html  template-recipes.html  template-weapons-skill.html  template-weapons.html
utils/: artifact_utils.py  common_utils.py  cook_utils.py  fashion_utils.py  font_server.py  image_utils.py  matrix_utils.py  minio_client.py  screenshots_utils.py  weapons_utils.py
(+7 files in other folders)
