[tool.poetry]
name = "hotta-data-builder"
version = "0.1.0"
description = ""
authors = ["“hollow288” <571339274@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tortoise-orm = {extras = ["aiomysql"], version = "^0.25.1"}
minio = "^7.2.16"
playwright = "^1.54.0"
jinja2 = "^3.1.6"
motor = "^3.7.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
